--- a/sources/Spotwelder.ioc
+++ b/sources/Spotwelder.ioc
@@ -1,27 +1,40 @@
 #MicroXplorer Configuration settings - do not modify
 ADC.IPParameters=SamplingTime
 ADC.SamplingTime=ADC_SAMPLETIME_7CYCLES_5
-DAC.DAC_Trigger=DAC_TRIGGER_SOFTWARE
+DAC.DAC_Trigger=DAC_TRIGGER_T6_TRGO
 DAC.IPParameters=DAC_Trigger
+Dma.DAC_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.DAC_CH1.0.Instance=DMA1_Channel3
+Dma.DAC_CH1.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.DAC_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.DAC_CH1.0.Mode=DMA_CIRCULAR
+Dma.DAC_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.DAC_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.DAC_CH1.0.Priority=DMA_PRIORITY_LOW
+Dma.DAC_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=DAC_CH1
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F0
 Mcu.IP0=ADC
 Mcu.IP1=DAC
-Mcu.IP10=TIM14
-Mcu.IP11=TIM15
-Mcu.IP12=USB
-Mcu.IP13=USB_DEVICE
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SPI2
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IP8=TIM2
-Mcu.IP9=TIM3
-Mcu.IPNb=14
+Mcu.IP10=TIM3
+Mcu.IP11=TIM6
+Mcu.IP12=TIM14
+Mcu.IP13=TIM15
+Mcu.IP14=USB
+Mcu.IP15=USB_DEVICE
+Mcu.IP2=DMA
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SPI2
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IP9=TIM2
+Mcu.IPNb=16
 Mcu.Name=STM32F072C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -55,21 +68,23 @@ Mcu.Pin33=PB7
 Mcu.Pin34=PB8
 Mcu.Pin35=PB9
 Mcu.Pin36=VP_SYS_VS_Systick
-Mcu.Pin37=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM15_VS_ClockSourceINT
-Mcu.Pin39=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin37=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM15_VS_ClockSourceINT
 Mcu.Pin4=PA0
+Mcu.Pin40=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=40
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F072C8Tx
 MxCube.Version=5.5.0
 MxDb.Version=DB.5.0.50
+NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -78,6 +93,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM15_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USB_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=TEMP1
@@ -347,6 +363,11 @@ TIM2.Channel-Output\ Compare4\ CH4=TIM_CHANNEL_4
 TIM2.IPParameters=Channel-Output Compare4 CH4
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.IPParameters=Channel-PWM Generation3 CH3
+TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM6.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger
+TIM6.Period=1500-1
+TIM6.Prescaler=4-1
+TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
@@ -357,6 +378,8 @@ VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_TIM15_VS_ClockSourceINT.Mode=Internal
 VP_TIM15_VS_ClockSourceINT.Signal=TIM15_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=Spotwelder-UI
