--- a/sources/Spotwelder.ioc
+++ b/sources/Spotwelder.ioc
@@ -3,6 +3,15 @@ ADC.IPParameters=SamplingTime
 ADC.SamplingTime=ADC_SAMPLETIME_7CYCLES_5
 DAC.DAC_Trigger=DAC_TRIGGER_T6_TRGO
 DAC.IPParameters=DAC_Trigger
+Dma.ADC.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC.1.Instance=DMA1_Channel1
+Dma.ADC.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC.1.Mode=DMA_NORMAL
+Dma.ADC.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC.1.Priority=DMA_PRIORITY_LOW
+Dma.ADC.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.DAC_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.DAC_CH1.0.Instance=DMA1_Channel3
 Dma.DAC_CH1.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -13,7 +22,8 @@ Dma.DAC_CH1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.DAC_CH1.0.Priority=DMA_PRIORITY_LOW
 Dma.DAC_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=DAC_CH1
-Dma.RequestsNb=1
+Dma.Request1=ADC
+Dma.RequestsNb=2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -68,22 +78,24 @@ Mcu.Pin33=PB7
 Mcu.Pin34=PB8
 Mcu.Pin35=PB9
 Mcu.Pin36=VP_SYS_VS_Systick
-Mcu.Pin37=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin38=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM2_VS_OPM
+Mcu.Pin38=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin4=PA0
-Mcu.Pin40=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin40=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin41=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=41
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F072C8Tx
 MxCube.Version=5.5.0
 MxDb.Version=DB.5.0.50
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -93,6 +105,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM15_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USB_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PA0.GPIOParameters=GPIO_Label
@@ -168,10 +181,12 @@ PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=TACHO
 PB1.Locked=true
 PB1.Signal=S_TIM14_CH1
-PB10.GPIOParameters=GPIO_Label
+PB10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PB10.GPIO_Label=FOOT_SW
+PB10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PB10.GPIO_PuPd=GPIO_PULLUP
 PB10.Locked=true
-PB10.Signal=GPIO_Input
+PB10.Signal=GPXTI10
 PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=TRIGGER
 PB11.Locked=true
@@ -287,7 +302,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_DAC_Init-DAC-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM14_Init-TIM14-false-HAL-true,11-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,12-MX_TIM15_Init-TIM15-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM14_Init-TIM14-false-HAL-true,12-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,13-MX_TIM15_Init-TIM15-false-HAL-true,14-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -309,6 +324,8 @@ RCC.USART2Freq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
 SH.COMP_DAC1_group.ConfNb=1
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
 SH.S_TIM14_CH1.0=TIM14_CH1,Input_Capture1_from_TI1
@@ -319,7 +336,7 @@ SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
 SH.S_TIM1_CH3.ConfNb=1
-SH.S_TIM2_CH4.0=TIM2_CH4,Output Compare4 CH4
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
 SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
@@ -359,8 +376,14 @@ TIM14.IPParameters=Channel
 TIM15.IPParameters=Prescaler,Period
 TIM15.Period=20
 TIM15.Prescaler=4800-1
-TIM2.Channel-Output\ Compare4\ CH4=TIM_CHANNEL_4
-TIM2.IPParameters=Channel-Output Compare4 CH4
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV2
+TIM2.IPParameters=Prescaler,Period,ClockDivision,Channel-PWM Generation4 CH4,OCMode_PWM-PWM Generation4 CH4,Pulse-PWM Generation4 CH4,OCPolarity_4
+TIM2.OCMode_PWM-PWM\ Generation4\ CH4=TIM_OCMODE_PWM2
+TIM2.OCPolarity_4=TIM_OCPOLARITY_LOW
+TIM2.Period=1000
+TIM2.Prescaler=24000-1
+TIM2.Pulse-PWM\ Generation4\ CH4=500
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.IPParameters=Channel-PWM Generation3 CH3
 TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
@@ -378,6 +401,8 @@ VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_TIM15_VS_ClockSourceINT.Mode=Internal
 VP_TIM15_VS_ClockSourceINT.Signal=TIM15_VS_ClockSourceINT
+VP_TIM2_VS_OPM.Mode=OPM_bit
+VP_TIM2_VS_OPM.Signal=TIM2_VS_OPM
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
