--- a/sources/Spotwelder.ioc
+++ b/sources/Spotwelder.ioc
@@ -187,8 +187,9 @@ PB10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB10.GPIO_PuPd=GPIO_PULLUP
 PB10.Locked=true
 PB10.Signal=GPXTI10
-PB11.GPIOParameters=GPIO_Label
+PB11.GPIOParameters=GPIO_Speed,GPIO_Label
 PB11.GPIO_Label=TRIGGER
+PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB11.Locked=true
 PB11.Signal=S_TIM2_CH4
 PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -248,9 +249,10 @@ PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB9.GPIO_PuPd=GPIO_PULLUP
 PB9.Locked=true
 PB9.Signal=GPXTI9
-PC13.GPIOParameters=GPIO_Label
+PC13.GPIOParameters=PinState,GPIO_Label
 PC13.GPIO_Label=CHARGER_EN
 PC13.Locked=true
+PC13.PinState=GPIO_PIN_SET
 PC13.Signal=GPIO_Output
 PC14-OSC32_IN.GPIOParameters=GPIO_Label
 PC14-OSC32_IN.GPIO_Label=PWR_LED
@@ -358,7 +360,7 @@ TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV4
+TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV1
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,Period,ClockDivision,AutoReloadPreload,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,OCPolarity_1,OCIdleState_1,OCPolarity_2,OCIdleState_2,OCPolarity_3,OCIdleState_3
 TIM1.OCIdleState_1=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_2=TIM_OCIDLESTATE_SET
@@ -367,7 +369,7 @@ TIM1.OCPolarity_1=TIM_OCPOLARITY_LOW
 TIM1.OCPolarity_2=TIM_OCPOLARITY_LOW
 TIM1.OCPolarity_3=TIM_OCPOLARITY_LOW
 TIM1.Period=100
-TIM1.Prescaler=1200
+TIM1.Prescaler=4800-1
 TIM1.Pulse-PWM\ Generation1\ CH1=100
 TIM1.Pulse-PWM\ Generation2\ CH2=50
 TIM1.Pulse-PWM\ Generation3\ CH3=25
@@ -377,13 +379,14 @@ TIM15.IPParameters=Prescaler,Period
 TIM15.Period=20
 TIM15.Prescaler=4800-1
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV2
-TIM2.IPParameters=Prescaler,Period,ClockDivision,Channel-PWM Generation4 CH4,OCMode_PWM-PWM Generation4 CH4,Pulse-PWM Generation4 CH4,OCPolarity_4
+TIM2.ClockDivision=TIM_CLOCKDIVISION_DIV1
+TIM2.CounterMode=TIM_COUNTERMODE_DOWN
+TIM2.IPParameters=Prescaler,Period,ClockDivision,OCPolarity_4,Channel-PWM Generation4 CH4,Pulse-PWM Generation4 CH4,OCMode_PWM-PWM Generation4 CH4,CounterMode
 TIM2.OCMode_PWM-PWM\ Generation4\ CH4=TIM_OCMODE_PWM2
 TIM2.OCPolarity_4=TIM_OCPOLARITY_LOW
 TIM2.Period=1000
-TIM2.Prescaler=24000-1
-TIM2.Pulse-PWM\ Generation4\ CH4=500
+TIM2.Prescaler=48000-1
+TIM2.Pulse-PWM\ Generation4\ CH4=100
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.IPParameters=Channel-PWM Generation3 CH3
 TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
